--- a/AmbChat/app/src/main/res/layout/activity_home.xml
+++ b/AmbChat/app/src/main/res/layout/activity_home.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginTop="5dp"
+    android:layout_marginTop="@dimen/padding_username"
     android:orientation="vertical">
 
     <LinearLayout
@@ -24,7 +24,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="2"
-            android:hint="Search friend" />
+            android:hint="@string/SearchFriend" />
 
         <Button
             android:id="@+id/btnSearch"
@@ -33,24 +33,27 @@
             android:layout_gravity="center"
             android:layout_weight="1"
             android:gravity="center"
-            android:hint="Search"
+            android:hint="@string/Search"
             android:textColor="@android:color/black"
-            android:textSize="18sp" />
+            android:textAppearance="@style/textMedium" />
 
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginBottom="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginBottom="@dimen/margin"
+        android:layout_marginTop="@dimen/margin"
         android:layout_weight="8"
         android:orientation="horizontal">
 
         <ListView
             android:id="@+id/lvListFriends"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"></ListView>
+            android:layout_height="match_parent"
+            >
+
+        </ListView>
     </LinearLayout>
 
     <LinearLayout
