--- a/AmbChat/app/src/main/res/layout/info_user.xml
+++ b/AmbChat/app/src/main/res/layout/info_user.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#d6cfcf"
+    android:background="@color/white"
     android:orientation="vertical"
     tools:context=".fragments.InforUserFragment">
     <!--  <include layout="@layout/app_bar_layout" android:id="@+id/infor_user_toolbar" />-->
@@ -12,16 +12,16 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="2"
-        android:background="@color/colorPrimary"
-        android:scaleType="centerCrop"
-        android:src="@drawable/baseline_person_pin_white_48dp" />
+        android:background="@color/white"
+        android:scaleType="center"
+        android:src="@drawable/baseline_person_pin_black_48dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_gravity="center"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
+        android:layout_marginLeft="@dimen/margin"
+        android:layout_marginRight="@dimen/margin"
         android:layout_weight="1"
         android:orientation="horizontal">
 
@@ -29,60 +29,56 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginLeft="5dp"
+            android:layout_marginLeft="@dimen/padding_username"
             android:layout_weight="0.3"
             android:gravity="left"
-            android:text="Name: "
-            android:textColor="#000000"
-            android:textSize="20sp" />
+            android:text="@string/fullName"
+            android:textColor="@color/black"
+            android:textAppearance="@style/textMedium" />
 
         <EditText
             android:id="@+id/edtFullNameInfor"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginLeft="16dp"
+            android:layout_marginLeft="@dimen/margin"
             android:layout_weight="0.7"
-            android:text="full name" />
+            android:text="@string/fullName" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-
-        android:layout_gravity="left"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_weight="1">
-
-        android:layout_gravity="center"
+        android:layout_gravity="left|center"
+        android:layout_marginLeft="@dimen/margin"
+        android:layout_marginRight="@dimen/margin"
         android:layout_weight="1"
         android:orientation="horizontal">
 
 
         <TextView
-
+            android:id="@+id/txtEmail"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginLeft="5dp"
+            android:layout_marginLeft="@dimen/padding_username"
             android:layout_weight="0.3"
             android:gravity="left"
-            android:text="UserName"
-            android:textColor="#000000"
-            android:textSize="20sp" />
+            android:text="@string/userName"
+            android:textColor="@color/black"
+            android:textAppearance="@style/textMedium" />
 
         <EditText
             android:id="@+id/edtUserNameInfor"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginTop="1dp"
+            android:layout_marginTop="@dimen/margin0"
             android:layout_weight="0.7"
             android:gravity="left"
-            android:text="user name"
-            android:textColor="#000000"
-            android:textSize="20sp" />
+            android:text="@string/userName"
+            android:textColor="@color/black"
+            android:textAppearance="@style/textMedium" />
 
     </LinearLayout>
 
@@ -90,8 +86,8 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_gravity="center"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
+        android:layout_marginLeft="@dimen/margin"
+        android:layout_marginRight="@dimen/margin"
         android:layout_weight="1"
         android:orientation="horizontal">
 
@@ -99,12 +95,12 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginLeft="5dp"
+            android:layout_marginLeft="@dimen/padding_username"
             android:layout_weight="0.3"
             android:gravity="left"
-            android:text="Password: "
-            android:textColor="#000000"
-            android:textSize="20sp" />
+            android:text="@string/password"
+            android:textColor="@color/black"
+            android:textAppearance="@style/textMedium" />
 
         <EditText
             android:id="@+id/edtPassWordInfor"
@@ -113,10 +109,9 @@
             android:layout_gravity="center"
             android:layout_weight="0.7"
             android:gravity="left"
-            android:password="true"
-            android:text="pass ne"
-            android:textColor="#000000"
-            android:textSize="20sp" />
+            android:text="@string/password"
+            android:textColor="@color/black"
+            android:textAppearance="@style/textMedium" />
 
     </LinearLayout>
 
@@ -124,26 +119,26 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_gravity="left"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
+        android:layout_marginLeft="@dimen/margin"
+        android:layout_marginRight="@dimen/margin"
         android:layout_weight="1">
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginLeft="5dp"
+            android:layout_marginLeft="@dimen/padding_username"
             android:layout_weight="0.7"
             android:gravity="left"
-            android:text="Gender"
-            android:textColor="#000000"
-            android:textSize="20sp" />
+            android:text="@string/gender"
+            android:textColor="@color/black"
+            android:textAppearance="@style/textMedium"/>
 
         <RadioGroup
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginLeft="5dp"
+            android:layout_marginLeft="@dimen/padding_username"
             android:layout_weight="2"
             android:orientation="horizontal">
 
@@ -151,17 +146,17 @@
                 android:id="@+id/radMaleInfor"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="16dp"
-                android:layout_marginRight="16dp"
-                android:text="Male" />
+                android:layout_marginLeft="@dimen/margin"
+                android:layout_marginRight="@dimen/margin"
+                android:text="@string/male" />
 
             <RadioButton
                 android:id="@+id/radFemaleInfor"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="16dp"
-                android:layout_marginRight="16dp"
-                android:text="FeMale" />
+                android:layout_marginLeft="@dimen/margin"
+                android:layout_marginRight="@dimen/margin"
+                android:text="@string/female" />
         </RadioGroup>
     </LinearLayout>
 
@@ -169,8 +164,8 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_gravity="center"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
+        android:layout_marginLeft="@dimen/margin"
+        android:layout_marginRight="@dimen/margin"
         android:layout_weight="1"
         android:orientation="horizontal">
 
@@ -178,10 +173,10 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginLeft="5dp"
+            android:layout_marginLeft="@dimen/padding_username"
             android:layout_weight="0.4"
             android:gravity="left"
-            android:text="Email: "
+            android:text="@string/email"
             android:textColor="#000000"
             android:textSize="20sp" />
 
@@ -192,8 +187,8 @@
             android:layout_gravity="center"
             android:layout_weight="0.8"
             android:gravity="left"
-            android:hint="Email ne"
-            android:textColor="#000000"
+            android:hint="@string/email"
+            android:textColor="@color/black"
             android:textSize="20sp" />
     </LinearLayout>
 
@@ -203,12 +198,15 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_gravity="center"
-        android:layout_margin="10dp"
+        android:layout_marginLeft="@dimen/margin100"
+        android:layout_marginRight="@dimen/margin100"
+        android:layout_marginTop="@dimen/margin"
+        android:layout_marginBottom="@dimen/margin"
         android:layout_weight="1"
-        android:background="@color/colorPrimary"
+        android:background="@color/colorAccent"
         android:gravity="center"
-        android:text="Update infor"
-        android:textColor="#ffffff"
-        android:textSize="20sp" />
+        android:text="@string/updateInfor"
+        android:textColor="white"
+        android:textAppearance="@style/textLarge" />
 </LinearLayout>
 
