--- a/AmbChat/app/src/main/res/layout/list_items_test.xml
+++ b/AmbChat/app/src/main/res/layout/list_items_test.xml
@@ -12,8 +12,10 @@
         android:layout_height="64dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="19dp"
-        android:src="@drawable/hinh_nen_dep_5" />
+        android:layout_marginStart="@dimen/margin"
+        android:src="@drawable/hinh_nen_dep_5"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="@dimen/margin" />
 
     <TextView
         android:id="@+id/txtname"
@@ -22,10 +24,12 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginStart="110dp"
-        android:layout_marginTop="13dp"
+        android:layout_marginTop="@dimen/margin"
         android:text="Display Name"
         android:textColor="@android:color/black"
-        android:textSize="18sp" />
+        android:textAppearance="@style/textMedium"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="110dp" />
 
     <TextView
         android:id="@+id/user_single_status"
@@ -34,6 +38,7 @@
         android:layout_alignParentTop="true"
         android:layout_alignStart="@+id/txtname"
         android:layout_marginTop="35dp"
-        android:text="User default Status" />
+        android:text="User default Status"
+        android:layout_alignLeft="@+id/txtname" />
 
 </RelativeLayout>
