--- a/AmbChat/app/src/main/res/layout/list_message_items.xml
+++ b/AmbChat/app/src/main/res/layout/list_message_items.xml
@@ -9,14 +9,16 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:textStyle="normal|bold" />
+        android:textStyle="normal|bold"
+        android:layout_alignParentLeft="true" />
 
     <TextView
         android:id="@+id/message_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/message_user"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true" />
 
     <TextView
         android:id="@+id/message_text"
@@ -26,5 +28,6 @@
         android:layout_below="@+id/message_user"
         android:layout_marginTop="5dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        android:textSize="18sp" />
+        android:textSize="18sp"
+        android:layout_alignParentLeft="true" />
 </RelativeLayout>
