--- a/AmbChat/app/src/main/res/values/dimens.xml
+++ b/AmbChat/app/src/main/res/values/dimens.xml
@@ -5,4 +5,10 @@
     <dimen name="nav_header_vertical_spacing">8dp</dimen>
     <dimen name="nav_header_height">176dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="margin">16dp</dimen>
+    <dimen name="margin0">0dp</dimen>
+    <dimen name="margin100">100dp</dimen>
+    <dimen name="padding">50dp</dimen>
+    <dimen name="padding_username">7dp</dimen>
+
 </resources>
