--- a/AmbChat/app/src/main/res/layout/list_mess.xml
+++ b/AmbChat/app/src/main/res/layout/list_mess.xml
@@ -34,10 +34,11 @@
             android:gravity="center"
             android:hint="@string/Search"
             android:textColor="@android:color/black"
-            android:textAppearance="@style/textSmall" />
+            android:textSize="20sp"
+             />
 
     </LinearLayout>
-
+    <!--android:textAppearance="@style/textSmall"-->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
