--- a/AmbChat/app/src/main/res/menu/main_menu.xml
+++ b/AmbChat/app/src/main/res/menu/main_menu.xml
@@ -2,7 +2,7 @@
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/main_acount_btn"
+        android:id="@+id/main_account_btn"
         android:title="Acount"
 
         />
