--- a/AmbChat/app/src/main/res/menu/main_menu.xml
+++ b/AmbChat/app/src/main/res/menu/main_menu.xml
@@ -13,4 +13,11 @@
     <item
         android:id="@+id/main_logout_btn"
         android:title="Logout" />
+
+    <item
+        android:id="@+id/menu_settings"
+        android:orderInCategory="100"
+        android:title="Settings"
+        app:showAsAction="never" />
+
 </menu>
