--- a/AmbChat/app/src/main/res/layout/fragment_infor_user.xml
+++ b/AmbChat/app/src/main/res/layout/fragment_infor_user.xml
@@ -4,8 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    android:orientation="vertical"
-    tools:context=".activities.InforUserActivity">
+    android:orientation="vertical">
     <!--  <include layout="@layout/app_bar_layout" android:id="@+id/infor_user_toolbar" />-->
     <ImageView
         android:id="@+id/imgAvatar"
